Fix CLS (Cumulative Layout Shift)

--- a/styles/post-detail.css
+++ b/styles/post-detail.css
@@ -21,6 +21,7 @@ section.hero {
 .post-detail .post-image {
   width: 100%;
   margin-bottom: 1rem;
+  object-fit: cover;
 }
 
 .post-detail .post-image:hover {
@@ -31,6 +32,7 @@ section.hero {
   transform: none;
 }
 
+/* Modal */
 .modal-body {
   position: relative;
 }
